# D3-DNA-Discrete-Diffusion

./: .gitignore  MIGRATION_GUIDE.md  MIGRATION_GUIDE_SIMPLE.md  MODEL_ZOO_GUIDE.md  README.md  README_LIGHTNING.md  README_LIGHTNING_PHASE2.md  create_references_csv.py  environment.yml  pyproject.toml  setup.sh  setup_new.sh  test_config_combinations.py  test_ddim_sampler.py
configs/: config.yaml  lightning_config.yaml
ddim_sweep_output/: ddim_sweep_results.csv
evaluation/d3_analysis/: deepSTARR_SHAP.ipynb
evaluation_results/: deepstarr_transformer_test_results.json
model/: __init__.py  cnn.py  ema.py  layers.py  transformer.py  transformer_mpra.py  transformer_promoter.py
model_zoo/: __init__.py
scripts/: __init__.py  change_env.sh  convert_checkpoints.py  ddim_sampling.py  ddim_sweep.py  evaluate.py  explore_data.ipynb  lightning_train.sh  lightning_trainer.py  lightning_trainer_ray.py  lightning_transfer_learn.sh  partition_data.py  partition_data.sh  run_evaluate.sh  run_evaluate_unified.py  run_evaluate_unified_ddim.py  run_sample.py  run_sample_promoter.py  run_sampling_unified.py  run_train.py  run_train_unified.py  sample.py  sampling.py  test_checkpoint_compatibility.py  test_ddim_sampler.py  test_lightning_integration.py  tpe.py  train.py  train_array.sh  train_array_2.sh  train_full.sh  train_lightning.py  train_lightning_ray.py  train_lightning_transfer.py
utils/: __init__.py  checkpoint_utils.py  config_utils.py  data.py  data_utils.py  graph_lib.py  load_model.py  losses.py  model_interface.py  noise_lib.py  sp_mse_callback.py  utils.py
(+76 files in other folders)
